--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -4,18 +4,15 @@
       .side-chat__header__block__left 
         = current_user.name
       .side-chat__header__block__right
-        = link_to '#', class: "edit-icon-btn" do
+        = link_to new_group_path, class: "edit-icon-btn" do
           = icon('fas fa-edit', class: 'icon')
         = link_to edit_user_path(current_user), class: "cog-icon-btn" do
           = icon('fas fa-cog', class: 'icon')
   .side-chat__groups 
-    .side-chat__groups__group
-      .side-chat__groups__group--name
-        white-bear
-      .side-chat__groups__group--message
-        おはよ〜
-    .side-chat__groups__group
-      .side-chat__groups__group--name
-        G-shiro3
-      .side-chat__groups__group--message
-        こんにちは
+    - current_user.groups.each do |group|
+      .side-chat__groups__group
+        = link_to '#' do
+          .group--name
+            = group.name
+          .group--message
+            メッセージはまだありません。
