--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -2,32 +2,22 @@
   .main-chat__header
     .main-chat__header__left
       .main-chat__header__left--group
-        white-bear
+        = @group.name
       .main-chat__header__left--member
-        Member:しろくま,aaa
+        = "Members:"
+        - @group.users.each do |user|
+          = user.name
     .main-chat__header__right--btn
-      = link_to 'Edit','#', class: "main-chat__header__right--btn"
+      = link_to 'Edit', edit_group_path(current_user), class: "main-chat__header__right--btn"
   .main-chat__messages
-    .main-chat__messages__message
-      .main-chat__messages__message__info
-        .main-chat__messages__message__info--talker
-          しろくま
-        .main-chat__messages__message__info--created_at
-          2020/02/09(Sun)10:12
-      .main-chat__messages__message--chat
-        おはよ〜
-      .main-chat__messages__message__info
-        .main-chat__messages__message__info--talker
-          G-shiro2
-        .main-chat__messages__message__info--created_at
-          2020/02/09(Sun)11:31
-      .main-chat__messages__message--chat
-        さむいな〜
-  .form
-    %form.new-message
-      .input-box
-        %input{type: "text", placeholder: "type a message",id:"text"}
-        %label{for:"icon",class:"input-box__image"}
-          = icon('far fa-image', class:"")
-          %input{type:"file" ,id:"icon"}
-      %input{type: "submit",value: "Send",class:"form__btn"}
+    = render @messages
+
+  .main-chat__form
+    .main-chat__form__new-messages
+      = form_for [@group, @message] do |f|
+        .main-chat__form__new-messages__message-box
+          = f.text_field :content, class:"main-chat__form__new-messages__message-box__input-text", placeholder: "type a message"
+          = f.label :image, for: "hidden", class:"main-chat__form__new-messages__message-box__input-image" do
+            = icon('far fa-image', class: "icon")
+            = f.file_field :image, id: "hidden"
+          = f.submit "send", class: "main-chat__form__new-messages__form__btn"
