--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -11,8 +11,8 @@
   .side-chat__groups 
     - current_user.groups.each do |group|
       .side-chat__groups__group
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .group--name
             = group.name
           .group--message
-            メッセージはまだありません。
+            = group.show_last_message
