--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -40,12 +40,17 @@
     height: calc(100vh - 190px);
     padding-top: 35px;
     padding-left: 40px;
+    overflow: scroll;
+    &__message {
+      padding-bottom: 40px;
+    }
       &__message__info {
         display: flex;
         justify-content: left;
         margin-bottom: 12px;        
         &--talker {
           color: #333333;
+          font-weight: bold;
         }
         &--created_at {
           font-size: 12px;
@@ -56,9 +61,15 @@
       &__message--chat {
           color: #434A54;
           font-size: 14px;
-          margin-bottom: 46px;
+          margin-bottom: 10px;
+          position: relative;
+      }
+      // .lower-message__image {
+      //     position: absolute;
+      //     top: 25px;
+      //     left:10px;
+      
     }
-  }
   &__form {
     padding: 20px 40px;
     height: 90px;
