--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.main-chat__messages__message
+.main-chat__messages__message{data: {message: {id: message.id}}}
   .main-chat__messages__message__info
     .main-chat__messages__message__info--talker
       = message.user.name
